login bootstrap ejemplo

--- a/unidad 4/public/css/main.less
+++ b/unidad 4/public/css/main.less
@@ -1,5 +1,11 @@
+
+.myBG(@color){
+    background-color: @color;
+}
+
 .container{
     form{
+        
         fieldset{
             background-color: red;
             button{
